Fixed Node Rendering on conduits. Added catch for when north is not a valid direction when grabbing ports for selection.
**NOTE** Need to still reduce available options when working on a non-large conduit.